# PK4_Gr2

Notatnik/: CMakeLists.txt  CMakeLists.txt.user.4ee3d7f  CMakeLists.txt.user.643334b  mainwindow.cpp  mainwindow.h  mainwindow.ui  rysuj.cpp  rysuj.h  strona.cpp  strona.h  zeszyt.cpp  zeszyt.h
Pro/: CMakeLists.txt  CMakeLists.txt.user.643334b  CMakeLists.txt.user.caea7a3  Rozmiary.h  main.cpp  mapperrozmiarow.cpp  mapperrozmiarow.h  notatnik.cpp  notatnik.h  notatnik.ui  rysuj.cpp  rysuj.h  rysuj.ui  rysuj2.cpp  rysuj2.h  rysuj2.ui  zeszyt.cpp  zeszyt.h
Pro/Pro/: CMakeLists.txt  main.cpp  mapperrozmiarow.cpp  mapperrozmiarow.h  notatnik.h  rysuj.cpp  rysuj.h  rysuj2.cpp  zeszyt.h
build-Notatnik-Desktop_Qt_6_0_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Notatnik.ilk  build.ninja  cmake_install.cmake
build-Notatnik-Desktop_Qt_6_0_2_MSVC2019_64bit-Debug/Notatnik_autogen/: deps
build-Notatnik-Desktop_Qt_6_0_2_MSVC2019_64bit-Debug/Notatnik_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_rysuj.cpp
build-Notatnik-Desktop_Qt_6_0_2_MSVC2019_64bit-Debug/Notatnik_autogen/include/: ui_mainwindow.h
build-Notatnik-Desktop_Qt_6_0_2_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-Notatnik-Desktop_Qt_6_0_2_MinGW_64_bit-Debug/Notatnik_autogen/: deps  mocs_compilation.cpp
build-Pro-Desktop_Qt_6_0_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Pro.ilk  build.ninja  cmake_install.cmake
build-Pro-Desktop_Qt_6_0_2_MSVC2019_64bit-Debug/Pro_autogen/: deps  mocs_compilation.cpp
(+26 files in other folders)
